# maps

./: .flake8  .gitattributes  .gitignore  .isort.cfg  .prettierignore  .prettierrc  CNAME  README.md  eslint.config.js  index.html  index_dev.html  package-lock.json  package.json  playwright.config.js  pyproject.toml  vite.config.js
3d/: README.md  index.html
css/: main.css
data/: community-markers.sl.json  custom-loc.json  custom-markers.siu.json  custom-markers.sl.json  custom-markers.slc.json  custom-markers.sw.json  gameClasses.json  iconConfigs.json  layerConfigs.json  layers.csv  loc.gameClasses.json  markers.siu.json  markers.sl.json  markers.slc.json  markers.sw.json  types.csv  ytdata.siu.json  ytdata.sl.json  ytdata.slc.json
doc/: ACRHITECTURE.md  BACKEND_DEVELOPMENT.md  CONTRIBUTING.md  DATA_EXTRACTION.md  DataPreparation.txt  EDITING_DATA.md  FRONTEND_DEVELOPMENT.md  ICON_CONFIG.md  USING_BUILD_MODE.md  WEB_DEVELOPMENT.md  datapreparation.md  technicalnotes.md
docs/: technicalnotes.md
js/: arrowLine.js  gameClasses.js  icons.js  layerConfig.js  layerConfig_dev.js  locStr.js  main.js  main_dev.js  mapIcon.js  mapLayer.js  mapObject.js  mapParam.js  mapPins.js  saveFileSystem.js  settings.js  supraDefs.js  supraMap.js  supraSearch.js  utils.js
scripts/: custom-markers.siu.json  custom-markers.sl.json  custom-markers.slc.json  deploy-gh-pages.cmd  deploy-gh-pages.mjs  deploy-watch.cmd  dumpsavefile.js  dumpsavefilesw.mjs  dumpsavestrings.js  export.cmd  findslpaks.cmd  gentiles.py  join.bat  json2csv.py  legacy-ytdata.siu.json  legacy-ytdata.sl.json  (+20 more)
(+163 files in other folders)
