[project]
name = "supramaps"
version = "0.1.0"
description = "Maps for various Supra Games"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "black>=26.3.1",
    "cibuildwheel>=3.4.1",
    "flake8>=7.3.0",
    "isort>=8.0.1",
    "libpysal>=4.14.1",
    "mathutils==3.3.0",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "scikit-learn>=1.8.0",
    "ue4parse",
]

[tool.black]
line-length = 120
target-version = ['py312']
skip-string-normalization = true

[tool.uv.sources]
# Note this is Joric's copy and originally installed as follows:
#   pip install UE4Parse[tex]@git+https://github.com/MinshuG/pyUE4Parse.git
ue4parse = { git = "https://github.com/joric/pyUE4Parse.git" }
